<resources>
    <string name="app_name">Readable Reddit</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_display_post">DisplayPostActivity</string>
    <string name="title_activity_displat_comments">DisplatCommentsActivity</string>
    
    
    <string name="comments">%1$s Comments</string>
    <string name="score">Score %1$d</string>
    <string name="subr">\u2022 %1s</string>
    <string name="share">Share</string>
    <string name="replies">View Replies</string>
    <string name="points">Points %1$d</string>
    <string name="days">%1dd</string>
    <string name="hours">%1dh</string>
    <string name="minutes">%1dm</string>
    <string name="seconds">%1ds</string>
    <string name="now">Now</string>
    <string name="commentTitle">Comments</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="reddit">Reddit</string>

    <string name="science">Science</string>
    <string name="pics">Pics</string>
    <string name="ask_reddit">AskReddit</string>
    <string name="todayilearned">Today I Learned</string>
    <string name="aww">Aww</string>
    <string name="books">Books</string>
    <string name="dataisbeautiful">Data Is Beautiful</string>
    <string name="explainlikeimfive">Explain Like I am Five</string>
    <string name="funny">Funny</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="philosphy">Philosophy</string>
    <string name="showerthoughts">Shower Thoughts</string>
    <string name="tifu">Today I Fucked Up</string>
    <string name="gif">GIFs</string>
    <string name="front_page">Front Page</string>
    <string name="world_news">World News</string>
    <string name="ama">Ask Me Anything</string>
    <string name="mildly_interesting">Mildly Interesting</string>
    <string name="documentaries">Documentaries</string>
    <string name="diy">Do It Yourself</string>
    <string name="listen_to_this">Listen To This</string>
    <string name="personal_finance">Personal Finance</string>
    <string name="space">Space</string>
    <string name="writing_prompts">Writing Prompts</string>
    <string name="art">Art</string>
    <string name="startups">Startups</string>
    <string name="technology">Technology</string>

    <string name="title_activity_web_view">WebViewActivity</string>

    <string name="load_more">Click to View More</string>
    <string name="title_activity_gif">GifActivity</string>
    <string name="title_activity_display_comments">DisplayCommentsActivity</string>
    <string name="load">Load More…</string>

    <string name="dialog_title">Needs Help!</string>
    <string name="dialog_content">Ping the dev at siddharthv93@gmail.com or Contribute at https://github.com/padfoot27/ReadableReddit</string>

    <plurals name="comment">
        <item quantity="one">%1$s Comment</item>
        <item quantity="other">%1$s Comments</item>
    </plurals>
</resources>
