<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/ama"
            android:title="@string/ama" />

        <item
            android:id="@+id/art"
            android:title="@string/art" />

        <item
            android:id="@+id/ask_redddit"
            android:title="@string/ask_reddit" />

        <item
            android:id="@+id/aww"
            android:title="@string/aww" />

        <item
            android:id="@+id/books"
            android:title="@string/books" />

        <item
            android:id="@+id/dataisbeautiful"
            android:title="@string/dataisbeautiful" />

        <item
            android:id="@+id/diy"
            android:title="@string/diy" />

        <item
            android:id="@+id/documentaries"
            android:title="@string/documentaries" />

        <item
            android:id="@+id/explainlikeimfive"
            android:title="@string/explainlikeimfive" />

        <item
            android:id="@+id/front_page"
            android:title="@string/front_page" />

        <item
            android:id="@+id/funny"
            android:title="@string/funny" />

        <item
            android:id="@+id/listen_to_this"
            android:title="@string/listen_to_this" />

        <item
            android:id="@+id/mildly_interesting"
            android:title="@string/mildly_interesting" />

        <item
            android:id="@+id/movies"
            android:title="@string/movies" />

        <item
            android:id="@+id/music"
            android:title="@string/music" />

        <item
            android:id="@+id/personal_finance"
            android:title="@string/personal_finance" />

        <item
            android:id="@+id/philosphy"
            android:title="@string/philosphy" />

        <item
            android:id="@+id/pics"
            android:title="@string/pics" />

        <item
            android:id="@+id/science"
            android:title="@string/science" />

        <item
            android:id="@+id/showerthoughts"
            android:title="@string/showerthoughts" />

        <item
            android:id="@+id/space"
            android:title="@string/space" />

        <item
            android:id="@+id/startups"
            android:title="@string/startups" />

        <item
            android:id="@+id/technology"
            android:title="@string/technology" />

        <item
            android:id="@+id/tifu"
            android:title="@string/tifu" />

        <item
            android:id="@+id/todayilearned"
            android:title="@string/todayilearned" />

        <item
            android:id="@+id/world_news"
            android:title="@string/world_news" />

        <item
            android:id="@+id/writing_prompts"
            android:title="@string/writing_prompts" />

    </group>
</menu>